--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "rollup": "^4.18.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
